syntax = "proto3";

package auth;

service AuthServiceGrpc {
  rpc checkToken(CheckTokenReq) returns (CheckTokenRes) {}
}

message CheckTokenReq {
  string token = 1;
}

message CheckTokenRes {
  CheckTokenResData data = 1;
  optional string error = 2;
}

message CheckTokenResData {
  string email = 2;
  string id = 3;
}
